--- a/app/views/chat_.ejs
+++ b/app/views/chat_.ejs
@@ -41,6 +41,8 @@
 </head>
 
 <body>
+
+
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class="container">
 			<div class="navbar-header">
@@ -52,6 +54,8 @@
 					</button>
 				<a class="navbar-brand" href="#">Multiroom Chat</a>
 			</div>
+
+
 			<div class="collapse navbar-collapse" id="navbar-collapse-1">
 				<ul class="nav navbar-nav">
 					<li>
@@ -68,13 +72,16 @@
 	<div class="container">
 		<div class="row conversa" id="conversa">
 			<div class="col-md-1"></div>
-			<div class="col-md-10" id="dialogos"></div>
+			<div class="col-md-10" id="dialogos">
+			</div>
 			<div class="col-md-1"></div>
+
 		</div>
 
 		<div class="row participantes" id="participantes" style="display:none">
 			<div class="col-md-1"></div>
-			<div class="col-md-10" id="pessoas"></div>
+			<div class="col-md-10" id="pessoas">
+			</div>
 			<div class="col-md-1"></div>
 		</div>
 	</div>
@@ -84,10 +91,9 @@
 			<div class="panel-body campo-mensagem">
 				<div class="col-md-12">
 					<div class="input-group">
-						<input type="text" class="form-control" placeholder="Mensagem" id="mensagem" />
-						<input type="hidden" value="<%= dadosForm.apelido%>" id="apelido" />
+						<input type="text" class="form-control" placeholder="Mensagem" id="mensagem">
+						<input type="hidden" value="<%=dadosForm.apelido%>" id="apelido" />
 						<input type="hidden" value="0" id="apelido_atualizado_nos_clientes" />
-
 						<span class="input-group-btn">
 								<button class="btn btn-default" type="button" id="enviar_mensagem">></button>
 							</span>
@@ -96,50 +102,49 @@
 			</div>
 		</div>
 	</nav>
-	</div>
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
 	<script src="/socket.io/socket.io.js"></script>
 
 	<script>
 			var socket = io('http://localhost:82');
-			
+
 			$('#enviar_mensagem').click(function(){
 				socket.emit(
 					'msgParaServidor',
-					{ 
-						apelido: $('#apelido').val(), 
+					{
+						apelido: $('#apelido').val(),
 						mensagem: $('#mensagem').val(),
 						apelido_atualizado_nos_clientes: $('#apelido_atualizado_nos_clientes').val()
 					}
 				);
+				$('#mensagem').val("");
 				$('#apelido_atualizado_nos_clientes').val(1);
-				$('#mensagem').val('');
-			})
+			});
 
 			socket.on('msgParaCliente', function(data){
-				//alert(data);
-				var html='';
-
+				var html = '';
 				html += '<div class="dialogo">';
-					html += '<h4>' + data.apelido + '</h4>';
-					html += '<p>' + data.mensagem + '<p>';
+				html += '<h4>' + data.apelido + '</h4>';
+				html += '<p>' + data.mensagem + '</p>';
 				html += '</div>';
-
 				$('#dialogos').append(html);
 				window.scrollTo(0, document.body.scrollHeight);
 			});
 
 			socket.on('participantesParaCliente', function(data){
 				var html = '';
+				html += '<img src="images/ico_usuario.png" />';
 				html += '<span class="participante">';
-				html += '<img src="images/ico_usuario.png" />';	
-				html += data.apelido; 
+				html += data.apelido;
 				html += '</span>';
 				$('#pessoas').append(html);
 			});
 
-	</script>
+
+		</script>
+
 </body>
 
 </html>
